--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,7 @@ p{
     display: flex;
     width: 100%; 
     margin: 0 auto; 
+    align-items: flex-end;
 }
 
 .square {
@@ -397,14 +398,99 @@ padding-left: 25%;
     border: 5px solid #5C517B;  
 }
 
-body.darkmode .tel{
-    background-color: #2C212B;
+.containers {
+    display: flex;
+    border-radius: 10px;
+    overflow: hidden;
+    height: 60%;
 }
 
-body.darkmode .square2{
+.form-section {
+    padding: 20px;
+    background-color: #DED3DD;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 60%;
+    height: 100%;
+}
+
+.form-section input{
+    width: 100%;
+    height: 20%;
+    padding: 10px;
+    margin-top: 5px;
+    background-color: #5C517B;
+    color: #20163C;
+    border-radius: 15px;
+    font-size: 1em;
+}
+
+.form-section input::placeholder{
+    color: #20163C;
+}
+
+#forms{
+    width: 100%;
+    height: 10%;
+    color: white;
+}
+
+#forms2{
+    height: 25%;
+}
+
+#submit{
+    color: #20163C;
+}
+
+#backbtn {
+    margin-top: 3%;
+    margin-left: 48%;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Centraliza horizontalmente */
+    width: 100px; /* Ajuste o tamanho conforme necessário */
+    height: 50px;
+    background-color: #4E314B;
+    border-radius: 20px;
+}
+
+#backbtn a {
+    padding-top: 18%;
+    text-align: center;
+    color: #20163C;
+    text-decoration: none;
+    font-size: 16px;
+    color: #DED3DD;
+}
+
+body.dark-mode #backbtn{
+    background-color: #CEB1CB;
+}
+
+body.dark-mode #backbtn a{
+    color: #2C212B;
+}
+
+body.dark-mode .form-section input::placeholder{
+    color: #CDC3E9;
+}
+
+body.dark-mode #submit{
+    color: #CDC3E9;
+}
+
+body.dark-mode .form-section input{
+    background-color: #8F84AE;
+}
+
+body.dark-mode #forms{
+    color: black;
+}
+
+body.dark-mode .form-section{
     background-color: #2C212B;
-    color: #2c2c2c;
-    border-color: #8F84AE;
 }
 
 body.dark-mode #ctt{
